tests/baselines/reference/functionOverloads34.errors.txt
tests/cases/compiler/functionOverloads34.ts(4,9): error TS2717: No overload expects 0 arguments. The most matching overloads expect 1 arguments.


==== tests/cases/compiler/functionOverloads34.ts (1 errors) ====
    function foo(bar:{a:number;}):string;
    function foo(bar:{a:boolean;}):number;
    function foo(bar:{a:any;}):any{ return bar }
    var x = foo();
            ~~~~~
!!! error TS2717: No overload expects 0 arguments. The most matching overloads expect 1 arguments.
    